--- a/app/globals.css
+++ b/app/globals.css
@@ -37,36 +37,36 @@
 
 
 .light {
-  --background: 210 20% 98%;
-  --foreground: 224 71.4% 4.1%;
-  --card: 210 20% 98%;
-  --card-foreground: 224 71.4% 4.1%;
-  --popover: 210 20% 98%;
-  --popover-foreground: 224 71.4% 4.1%;
+  --background: hsl(210 20% 98%);
+  --foreground: hsl(224 71.4% .1%);
+  --card: hsl(210 20% 98%);
+  --card-foreground: hsl(224 71.4% .1%);
+  --popover: hsl(210 20% 98%);
+  --popover-foreground: hsl(224 71.4% .1%);
   
-  --primary: 220.9 39.3% 11%;
-  --primary-foreground: 210 20% 98%;
-  --secondary: 210 20% 98%;
-  --secondary-foreground: 215 27.9% 16.9%;
+  --primary: hsl(220.9 39.3% 11%);
+  --primary-foreground: hsl(210 20% 98%);
+  --secondary: hsl(210 20% 98%);
+  --secondary-foreground: hsl(215 27.9% 16.9%);
   
-  --muted: 217.9 10.6% 64.9%;
-  --muted-foreground: 215 27.9% 16.9%;
-  --accent: 210 20% 98%;
-  --accent-foreground: 215 27.9% 16.9%;
+  --muted: hsl(217.9 10.6% 64.9%);
+  --muted-foreground: hsl(215 27.9% 16.9%);
+  --accent: hsl(210 20% 98%);
+  --accent-foreground: hsl(215 27.9% 16.9%);
   
-  --destructive: 210 20% 98%;
-  --destructive-foreground: 0 62.8% 30.6%;
+  --destructive: hsl(210 20% 98%);
+  --destructive-foreground: hsl(0 62.8% 30.6%);
   
-  --border: 210 20% 98%;
-  --input: 210 20% 98%;
+  --border: hsl(210 20% 98%);
+  --input: hsl(210 20% 98%);
   
-  --ring: 224 71.4% 4.1%;
+  --ring: hsl(224 71.4% 4.1%);
   
-  --chart-1: 220 70% 50%;
-  --chart-2: 160 60% 45%;
-  --chart-3: 30 80% 55%;
-  --chart-4: 280 65% 60%;
-  --chart-5: 340 75% 55%;
+  --chart-1: hsl(220 70% 50%);
+  --chart-2: hsl(160 60% 45%);
+  --chart-3: hsl(30 80% 55%);
+  --chart-4: hsl(280 65% 60%);
+  --chart-5: hsl(340 75% 55%);
   
   --sh-class: #4c97f8;
   --sh-identifier: #000;
